kubernetes/apps/home-assistant/home-assistant/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: multus/macvlan-homelab
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2024.10.3
          command:
            - sh
          args:
            - "-c"
            - "/scripts/zigbee.sh && python -m homeassistant --config /config"
          ports:
            - name: server
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
            - name: scripts
              mountPath: /scripts/
            - name: localtime
              mountPath: /etc/localtime
            - name: google-service-account-creds
              mountPath: /config/secrets
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: scripts
          configMap:
            name: scripts-config
            defaultMode: 0555
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: google-service-account-creds
          secret:
            secretName: google-service-account
      nodeSelector:
        usb: skyconnect
