kubernetes/apps/home-assistant/home-assistant/app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - port: 80
      targetPort: 8123
      name: http
  selector:
    app: home-assistant
