kubernetes/apps/home-assistant/home-assistant/app/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: homeassistant.lazylab.casa
    # nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    # nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homeassistant.lazylab.casa
      secretName: home-assistant-tls
  rules:
    - host: homeassistant.lazylab.casa
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
